; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfdlgs2.c_StarFilename.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfdlgs2.c_StarFilename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXPATHLEN = common dso_local global i32 0, align 4
@CHAR_STAR = common dso_local global i64 0, align 8
@szStarDotStar = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @StarFilename(i64* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  %7 = load i32, i32* @MAXPATHLEN, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %5, align 8
  %10 = alloca i64, i64 %8, align 16
  store i64 %8, i64* %6, align 8
  %11 = load i64*, i64** %3, align 8
  %12 = call i32 @StripPath(i64* %11)
  %13 = load i64*, i64** %3, align 8
  %14 = call i32 @lstrcpy(i64* %10, i64* %13)
  %15 = call i64* @GetExtension(i64* %10)
  store i64* %15, i64** %4, align 8
  %16 = load i64*, i64** %4, align 8
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %28

19:                                               ; preds = %1
  %20 = load i64, i64* @CHAR_STAR, align 8
  %21 = load i64*, i64** %3, align 8
  %22 = getelementptr inbounds i64, i64* %21, i64 0
  store i64 %20, i64* %22, align 8
  %23 = load i64*, i64** %3, align 8
  %24 = getelementptr inbounds i64, i64* %23, i64 1
  %25 = load i64*, i64** %4, align 8
  %26 = getelementptr inbounds i64, i64* %25, i64 -1
  %27 = call i32 @lstrcpy(i64* %24, i64* %26)
  br label %32

28:                                               ; preds = %1
  %29 = load i64*, i64** %3, align 8
  %30 = load i64*, i64** @szStarDotStar, align 8
  %31 = call i32 @lstrcpy(i64* %29, i64* %30)
  br label %32

32:                                               ; preds = %28, %19
  %33 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %33)
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @StripPath(i64*) #2

declare dso_local i32 @lstrcpy(i64*, i64*) #2

declare dso_local i64* @GetExtension(i64*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
